crates/server/tests/snapshots/error_golden__invalid_request_envelope.snap
---
source: crates/server/tests/error_golden.rs
expression: "StripeError::invalid_request(\"Missing required param: name.\").to_json()"
---
{
  "error": {
    "code": null,
    "message": "Missing required param: name.",
    "param": null,
    "type": "invalid_request_error"
  }
}
