crates/server/tests/snapshots/error_golden__not_found_envelope.snap
---
source: crates/server/tests/error_golden.rs
expression: "StripeError::not_found(\"customer\", \"cus_missing\").to_json()"
---
{
  "error": {
    "code": null,
    "message": "No such customer: 'cus_missing'",
    "param": null,
    "type": "invalid_request_error"
  }
}
